force-app/src/objects/CompetencyServiceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APIVersion__c</fullName>
        <defaultValue>63</defaultValue>
        <label>API version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CachedPicklistValueSetAPINames__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>Cached Picklist Value Set API Names</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompetencyFieldAPINames__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>Enable values to display as badges in the myCompetencies LWC&apos;s for the field API names listed.</description>
        <inlineHelpText>Enable values to display as badges in the myCompetencies LWC&apos;s for the field API names listed.</inlineHelpText>
        <label>Competency Field API Names</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTTPTimeoutValue__c</fullName>
        <defaultValue>30000</defaultValue>
        <label>HTTP Timeout Value</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competency Service Settings</label>
</CustomObject>